@@ -1,3 +1,10 @@
+2001-05-15  Sam Steingold  <sds@gnu.org>
+
+	* modules/clx/new-clx/clx.lisp: use DEFPACKAGE to define XLIB;
+	 import SYS::CONCAT-STRINGS
+	* modules/clx/new-clx/demos/clx-demos.lisp: load/compile
+	 sokoban.lisp only when the package XPM is present
+
 2001-05-14  Sam Steingold  <sds@gnu.org>
 
 	* constobj.d (current_language): use the package prefix I18N
